Hub-44: Make home responsive. - Added new component for work item description. - Made home responsive for mobile. - Added popup of description on mobile. - Fixed styling.

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,7 +1,9 @@
 $dark-color: #161616;
 $dark-contrast-color: #272d32;
+$dark-contrast-color-dark: rgba(0, 0, 0, .03);
 $dark-lightened-color: #5f6e7a;
 $bg-white: #e4e8ec;
+$bg-white-dark: rgba(0, 0, 0, 0.03);
 
 //$dark-color
 .text-dark
